[project]
name = "compas-analysis"
version = "0.1.0"
description = "Analysis of COMPAS dataset using various ML tools."
authors = [
    { name = "Ropafadzo Siziba", email = "142302018@smail.iitpkd.ac.in" }
]
dependencies = [
    "pandas>=1.3",
    "jupyterlab>=3.2",
    "aif360>=0.3.0",
    "matplotlib>=3.4",
    "seaborn>=0.11",
    "witwidget>=1.0"
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.rye]
managed = true
dev-dependencies = []
